<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity4"
    android:background="@color/lightblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A4vya"
                android:textColor="@color/background"
                android:textSize="38sp"
                android:textAlignment="center"
                android:layout_above="@+id/verivy"/>

            <TextView
                android:id="@+id/verivy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/A4wehave"
                android:textColor="@color/background"
                android:textAlignment="center"
                android:layout_above="@+id/etverify"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/etverify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/A4enterverif"
                android:textColorHint="#99ffffff"
                android:textAlignment="center"
                android:backgroundTint="@color/background"
                android:padding="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_alignParentBottom="true">
            </EditText>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonsend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonhal1"
                android:text="@string/A4send"
                android:textColor="@color/background"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp">
            </Button>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonsend"
                android:gravity="center">
                <TextView
                    android:id="@+id/doesntget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A4doesntget"
                    android:textColor="@color/background">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    android:layout_toEndOf="@+id/doesntget"
                    android:layout_marginStart="4dp">
                </TextView>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>