<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/lightblue">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        app:srcCompat="@drawable/ic_welcome_logo" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginBottom="420dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/bginvitefr"
        android:backgroundTint="@color/bginvitefr"
        android:textColorHint="@color/bginvitefr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginBottom="308dp"
        android:ems="10"
        android:hint="@string/A1password"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/bginvitefr"
        android:textColorHint="@color/bginvitefr"
        android:backgroundTint="@color/bginvitefr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/button"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/buttonhal1"
        android:text="@string/A1login"
        android:textColor="@color/bginvitefr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/buttonhal1"
        android:text="@string/A1cwb"
        android:textColor="@color/bginvitefr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/A1or"
        android:textColor="@color/bginvitefr"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="153dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/A1doesnt"
        android:textColor="@color/bginvitefr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>